--- a/customer/footer.html
+++ b/customer/footer.html
@@ -42,7 +42,7 @@
             <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
             <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
             <a href="https://www.instagram.com/abhish.3k/" class="instagram"><i class="bi bi-instagram"></i></a>
-            <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/abhishek-pr-6a6005294/" class="linkedin"><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
 
